Refactor worker dependencies: rename and restructure task handling for improved clarity and maintainability

--- a/src/embassy-access-worker/settings/embassies.rus.yaml
+++ b/src/embassy-access-worker/settings/embassies.rus.yaml
@@ -1,31 +1,31 @@
 # @format
 KdmidSubdomains:
   - Name: belgrad
-    EmbassyId: EMB.RUS.SRB.BEG
+    EmbassyId: EMB.RUS.SRB
   - Name: budapest
-    EmbassyId: EMB.RUS.HUN.BUD
+    EmbassyId: EMB.RUS.HUN
   - Name: sarajevo
-    EmbassyId: EMB.RUS.BIH.SJJ
+    EmbassyId: EMB.RUS.BIH
   - Name: berlin
-    EmbassyId: EMB.RUS.DEU.BER
+    EmbassyId: EMB.RUS.DEU
   - Name: podgorica
-    EmbassyId: EMB.RUS.MNE.POD
+    EmbassyId: EMB.RUS.MNE
   - Name: tirana
-    EmbassyId: EMB.RUS.ALB.TIA
+    EmbassyId: EMB.RUS.ALB
   - Name: paris
-    EmbassyId: EMB.RUS.FRA.PAR
+    EmbassyId: EMB.RUS.FRA
   - Name: rome
-    EmbassyId: EMB.RUS.ITA.ROM
+    EmbassyId: EMB.RUS.ITA
   - Name: dublin
-    EmbassyId: EMB.RUS.IRL.DUB
+    EmbassyId: EMB.RUS.IRL
   - Name: bern
-    EmbassyId: EMB.RUS.CHE.BER
+    EmbassyId: EMB.RUS.CHE
   - Name: helsinki
-    EmbassyId: EMB.RUS.FIN.HEL
+    EmbassyId: EMB.RUS.FIN
   - Name: hague
-    EmbassyId: EMB.RUS.NLD.HAG
+    EmbassyId: EMB.RUS.NLD
   - Name: ljubljana
-    EmbassyId: EMB.RUS.SVN.LJU
+    EmbassyId: EMB.RUS.SVN
 
 KdmidRussianServicesInstructions: &KdmidRussianServicesInstructions
   Instruction: Take the link you received in your email after registering your request on the kdmid.ru website. Put the link instead of <link> in the command above. Send it to the chat (without apostrophes).
