Refactor embassy data: update EmbassyId values for KdmidSubdomains and add detailed entries for Russian embassies in various countries

--- a/src/embassy-access-worker/settings/embassies.rus.yaml
+++ b/src/embassy-access-worker/settings/embassies.rus.yaml
@@ -1,31 +1,31 @@
 # @format
 KdmidSubdomains:
   - Name: belgrad
-    EmbassyId: EMB.RUS.SRB
+    EmbassyId: EMB.RUS.SRB.BEG
   - Name: budapest
-    EmbassyId: EMB.RUS.HUN
+    EmbassyId: EMB.RUS.HUN.BUD
   - Name: sarajevo
-    EmbassyId: EMB.RUS.BIH
+    EmbassyId: EMB.RUS.BIH.SJJ
   - Name: berlin
-    EmbassyId: EMB.RUS.DEU
+    EmbassyId: EMB.RUS.DEU.BER
   - Name: podgorica
-    EmbassyId: EMB.RUS.MNE
+    EmbassyId: EMB.RUS.MNE.TGD
   - Name: tirana
-    EmbassyId: EMB.RUS.ALB
+    EmbassyId: EMB.RUS.ALB.TIA
   - Name: paris
-    EmbassyId: EMB.RUS.FRA
+    EmbassyId: EMB.RUS.FRA.PAR
   - Name: rome
-    EmbassyId: EMB.RUS.ITA
+    EmbassyId: EMB.RUS.ITA.ROM
   - Name: dublin
-    EmbassyId: EMB.RUS.IRL
+    EmbassyId: EMB.RUS.IRL.DUB
   - Name: bern
-    EmbassyId: EMB.RUS.CHE
+    EmbassyId: EMB.RUS.CHE.BRN
   - Name: helsinki
-    EmbassyId: EMB.RUS.FIN
+    EmbassyId: EMB.RUS.FIN.HEL
   - Name: hague
-    EmbassyId: EMB.RUS.NLD
+    EmbassyId: EMB.RUS.NLD.HAG
   - Name: ljubljana
-    EmbassyId: EMB.RUS.SVN
+    EmbassyId: EMB.RUS.SVN.LJU
 
 KdmidRussianServicesInstructions: &KdmidRussianServicesInstructions
   Instruction: Take the link you received in your email after registering your request on the kdmid.ru website. Put the link instead of <link> in the command above. Send it to the chat (without apostrophes).
