Refactor embassy service identifiers: replace Constants.RUSSIAN_NODE_ID with Embassies.RUS; add Italian embassy service module

--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -17,6 +17,7 @@
         <Compile Include="dependencies\Telegram.fs" />
         <Compile Include="dependencies\Embassies.Russian.fs" />
         <Compile Include="embassies\Russian.fs" />
+        <Compile Include="embassies\Italian.fs" />
         <Compile Include="Initializer.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
