Refactor Russian embassy handling and remove unused Post module
- Deleted the Post module for Russian embassy as it is no longer needed.
- Updated Method.fs to remove references to the deleted Post module.
- Introduced a new Command module for handling subscription and appointment checks.
- Added Instruction and Notification modules to manage responses and notifications for embassy services.
- Refactored Query modules to streamline service handling for Russian embassy.
- Created Italian and Russian dependencies for worker tasks.
- Updated project file to include new dependencies and modules.

--- a/src/embassy-access-modules/embassy-access-russian/embassy-access-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-russian/embassy-access-russian.fsproj
@@ -16,8 +16,7 @@
         <Compile Include="clients\kdmid\Web.Html.ConfirmationPage.fs" />
         <Compile Include="clients\kdmid\Service.fs" />
         <Compile Include="clients\midpass\Domain.fs" />
-        <Compile Include="clients\midpass\Client.fs" />
-        <Compile Include="Client.fs" />
+        <Compile Include="clients\midpass\Service.fs" />
     </ItemGroup>
 
     <ItemGroup>
