--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -14,24 +14,23 @@
         <Compile Include="router\culture\Method.fs" />
         <Compile Include="router\users\Get.fs" />
         <Compile Include="router\users\Method.fs" />
-        <Compile Include="router\embassies\Get.fs" />
-        <Compile Include="router\embassies\Method.fs" />
         <Compile Include="router\embassies\russian\kdmid\Get.fs" />
-        <Compile Include="router\embassies\russian\kdmid\Post.fs" />
-        <Compile Include="router\embassies\russian\kdmid\Delete.fs" />
         <Compile Include="router\embassies\russian\kdmid\Method.fs" />
         <Compile Include="router\embassies\russian\midpass\Get.fs" />
         <Compile Include="router\embassies\russian\midpass\Method.fs" />
         <Compile Include="router\embassies\russian\Get.fs" />
-        <Compile Include="router\embassies\russian\Post.fs" />
-        <Compile Include="router\embassies\russian\Delete.fs" />
         <Compile Include="router\embassies\russian\Method.fs" />
+        <Compile Include="router\Get.fs" />
+        <Compile Include="router\Post.fs" />
+        <Compile Include="router\Delete.fs" />
+        <Compile Include="router\Method.fs" />
         <Compile Include="router\Router.fs" />
         <Compile Include="dependencies\client\Web.fs" />
         <Compile Include="dependencies\client\Culture.fs" />
         <Compile Include="dependencies\client\Persistence.fs" />
         <Compile Include="dependencies\client\Client.fs" />
         <Compile Include="dependencies\client\Request.fs" />
+        <Compile Include="dependencies\client\Notification.fs" />
         <Compile Include="dependencies\embassies\russian\Russian.fs" />
         <Compile Include="dependencies\embassies\russian\Midpass.fs" />
         <Compile Include="dependencies\embassies\russian\Kdmid.fs" />
@@ -39,12 +38,13 @@
         <Compile Include="dependencies\Users.fs" />
         <Compile Include="services\culture\Query.fs" />
         <Compile Include="services\culture\Command.fs" />
-        <Compile Include="services\embassies\russian\kdmid\Message.fs" />
+        <Compile Include="services\embassies\Instruction.fs" />
+        <Compile Include="services\embassies\Notification.fs" />
         <Compile Include="services\embassies\russian\kdmid\Query.fs" />
-        <Compile Include="services\embassies\russian\kdmid\Command.fs" />
         <Compile Include="services\embassies\russian\midpass\Query.fs" />
         <Compile Include="services\embassies\russian\Query.fs" />
         <Compile Include="services\embassies\Query.fs" />
+        <Compile Include="services\embassies\Command.fs" />
         <Compile Include="services\users\Query.fs" />
         <Compile Include="controllers\Culture.fs" />
         <Compile Include="controllers\embassies\Embassies.fs" />
