Refactor embassy access modules to use updated request and payload types
- Updated the Request and Payload types in the Italian and Russian embassy access modules to improve type safety and clarity.
- Refactored functions to utilize the new Payload structure, ensuring consistency across the codebase.
- Adjusted dependencies in the Telegram services to align with the new Request structure.
- Enhanced error handling and logging for better traceability during request processing.
- Modified the persistence layer to accommodate the new Request.Table structure for both Italian and Russian services.

--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -5,25 +5,25 @@
     </PropertyGroup>
     <ItemGroup>
         <Compile Include="domain\Constants.fs" />
-        <Compile Include="domain\EmbassyNode.fs" />
+        <Compile Include="domain\Embassy.fs" />
+        <Compile Include="domain\Service.fs" />
         <Compile Include="domain\Confirmation.fs" />
         <Compile Include="domain\Appointment.fs" />
         <Compile Include="domain\ProcessState.fs" />
         <Compile Include="domain\ConfirmationState.fs" />
-        <Compile Include="domain\ServiceNode.fs" />
-        <Compile Include="domain\RequestService.fs" />
         <Compile Include="domain\Limit.fs" />
         <Compile Include="domain\Request.fs" />
-        <Compile Include="domain\Notification.fs" />
         <Compile Include="data_access\EmbassyGraph.fs" />
         <Compile Include="data_access\ServiceGraph.fs" />
         <Compile Include="data_access\Confirmation.fs" />
         <Compile Include="data_access\Appointment.fs" />
         <Compile Include="data_access\ProcessState.fs" />
         <Compile Include="data_access\ConfirmationState.fs" />
-        <Compile Include="data_access\RequestService.fs" />
         <Compile Include="data_access\Limit.fs" />
-        <Compile Include="data_access\Request.fs" />
+        <Compile Include="data_access\request\Request.fs" />
+        <Compile Include="data_access\request\FileSystem.fs" />
+        <Compile Include="data_access\request\InMemory.fs" />
+        <Compile Include="data_access\request\Storage.fs" />
     </ItemGroup>
   
     <ItemGroup>
