Refactor storage abstractions and appointment confirmation logic
Updated storage abstractions, replacing "Table" with "Storage" and improved clarity in provider handling. Refactored appointment confirmation logic by integrating `Confirmation` directly, removing `ConfirmationState`. Adjusted dependencies and entity mappings across the application to align with the new structure.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -8,7 +8,10 @@
     <ItemGroup>
         <Compile Include="domain\Constants.fs" />
         <Compile Include="domain\Chat.fs" />
-        <Compile Include="data_access\Chat.fs" />
+        <Compile Include="data_access\chat\Chat.fs" />
+        <Compile Include="data_access\chat\FileSystem.fs" />
+        <Compile Include="data_access\chat\InMemory.fs" />
+        <Compile Include="data_access\chat\Storage.fs" />
         <Compile Include="router\culture\Get.fs" />
         <Compile Include="router\culture\Post.fs" />
         <Compile Include="router\culture\Method.fs" />
