--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -13,6 +13,7 @@
         <Compile Include="dependencies\AIProvider.fs" />
         <Compile Include="dependencies\Culture.fs" />
         <Compile Include="dependencies\Telegram.fs" />
+        <Compile Include="dependencies\embassies\Common.fs" />
         <Compile Include="dependencies\embassies\Russian.fs" />
         <Compile Include="dependencies\embassies\Italian.fs" />
         <Compile Include="embassies\Russian.fs" />
