Refactor confirmation handling: rename ConfirmationState to Confirmation, update related types and usages throughout the codebase

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -15,29 +15,30 @@
         <Compile Include="router\culture\Get.fs" />
         <Compile Include="router\culture\Post.fs" />
         <Compile Include="router\culture\Method.fs" />
-        <Compile Include="router\users\Get.fs" />
-        <Compile Include="router\users\Method.fs" />
         <Compile Include="router\embassies\russian\kdmid\Get.fs" />
+        <Compile Include="router\embassies\russian\kdmid\Post.fs" />
         <Compile Include="router\embassies\russian\kdmid\Method.fs" />
         <Compile Include="router\embassies\russian\midpass\Get.fs" />
+        <Compile Include="router\embassies\russian\midpass\Post.fs" />
         <Compile Include="router\embassies\russian\midpass\Method.fs" />
+        <Compile Include="router\embassies\russian\Method.fs" />
+        <Compile Include="router\embassies\italian\prenotami\Get.fs" />
+        <Compile Include="router\embassies\italian\prenotami\Post.fs" />
+        <Compile Include="router\embassies\italian\prenotami\Method.fs" />
+        <Compile Include="router\embassies\italian\Method.fs" />
         <Compile Include="router\embassies\Get.fs" />
         <Compile Include="router\embassies\Method.fs" />
-        <Compile Include="router\embassies\italian\prenotami\Get.fs" />
-        <Compile Include="router\embassies\italian\prenotami\Method.fs" />
-        <Compile Include="router\embassies\italian\Get.fs" />
-        <Compile Include="router\embassies\italian\Method.fs" />
-        <Compile Include="router\Get.fs" />
-        <Compile Include="router\Post.fs" />
-        <Compile Include="router\Delete.fs" />
-        <Compile Include="router\Method.fs" />
+        <Compile Include="router\services\Get.fs" />
+        <Compile Include="router\services\Method.fs" />
+        <Compile Include="router\subscriptions\Get.fs" />
+        <Compile Include="router\subscriptions\Delete.fs" />
+        <Compile Include="router\subscriptions\Method.fs" />
         <Compile Include="router\Router.fs" />
         <Compile Include="dependencies\client\Web.fs" />
         <Compile Include="dependencies\client\Culture.fs" />
         <Compile Include="dependencies\client\Persistence.fs" />
         <Compile Include="dependencies\client\Client.fs" />
         <Compile Include="dependencies\client\Request.fs" />
-        <Compile Include="dependencies\client\Notification.fs" />
         <Compile Include="dependencies\embassies\russian\Russian.fs" />
         <Compile Include="dependencies\embassies\russian\Midpass.fs" />
         <Compile Include="dependencies\embassies\russian\Kdmid.fs" />
@@ -48,11 +49,13 @@
         <Compile Include="dependencies\Services.fs" />
         <Compile Include="services\culture\Query.fs" />
         <Compile Include="services\culture\Command.fs" />
-        <Compile Include="services\embassies\Instruction.fs" />
-        <Compile Include="services\embassies\Notification.fs" />
+        <Compile Include="services\embassies\russian\kdmid\Instruction.fs" />
+        <Compile Include="services\embassies\russian\kdmid\Notification.fs" />
         <Compile Include="services\embassies\russian\kdmid\Query.fs" />
         <Compile Include="services\embassies\russian\midpass\Query.fs" />
         <Compile Include="services\embassies\russian\Query.fs" />
+        <Compile Include="services\embassies\italian\prenotami\Instruction.fs" />
+        <Compile Include="services\embassies\italian\prenotami\Notification.fs" />
         <Compile Include="services\embassies\italian\prenotami\Query.fs" />
         <Compile Include="services\embassies\italian\Query.fs" />
         <Compile Include="services\embassies\Query.fs" />
