--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -15,19 +15,19 @@
         <Compile Include="router\culture\Get.fs" />
         <Compile Include="router\culture\Post.fs" />
         <Compile Include="router\culture\Method.fs" />
-        <Compile Include="router\embassies\russian\kdmid\Get.fs" />
-        <Compile Include="router\embassies\russian\kdmid\Post.fs" />
-        <Compile Include="router\embassies\russian\kdmid\Method.fs" />
-        <Compile Include="router\embassies\russian\midpass\Get.fs" />
-        <Compile Include="router\embassies\russian\midpass\Post.fs" />
-        <Compile Include="router\embassies\russian\midpass\Method.fs" />
-        <Compile Include="router\embassies\russian\Method.fs" />
-        <Compile Include="router\embassies\italian\prenotami\Get.fs" />
-        <Compile Include="router\embassies\italian\prenotami\Post.fs" />
-        <Compile Include="router\embassies\italian\prenotami\Method.fs" />
-        <Compile Include="router\embassies\italian\Method.fs" />
         <Compile Include="router\embassies\Get.fs" />
         <Compile Include="router\embassies\Method.fs" />
+        <Compile Include="router\services\russian\kdmid\Get.fs" />
+        <Compile Include="router\services\russian\kdmid\Post.fs" />
+        <Compile Include="router\services\russian\kdmid\Method.fs" />
+        <Compile Include="router\services\russian\midpass\Get.fs" />
+        <Compile Include="router\services\russian\midpass\Post.fs" />
+        <Compile Include="router\services\russian\midpass\Method.fs" />
+        <Compile Include="router\services\russian\Method.fs" />
+        <Compile Include="router\services\italian\prenotami\Get.fs" />
+        <Compile Include="router\services\italian\prenotami\Post.fs" />
+        <Compile Include="router\services\italian\prenotami\Method.fs" />
+        <Compile Include="router\services\italian\Method.fs" />
         <Compile Include="router\services\Get.fs" />
         <Compile Include="router\services\Method.fs" />
         <Compile Include="router\subscriptions\Get.fs" />
@@ -35,39 +35,46 @@
         <Compile Include="router\subscriptions\Method.fs" />
         <Compile Include="router\Router.fs" />
         <Compile Include="dependencies\client\Web.fs" />
-        <Compile Include="dependencies\client\Culture.fs" />
         <Compile Include="dependencies\client\Persistence.fs" />
         <Compile Include="dependencies\client\Client.fs" />
         <Compile Include="dependencies\client\Request.fs" />
-        <Compile Include="dependencies\embassies\russian\Russian.fs" />
-        <Compile Include="dependencies\embassies\russian\Midpass.fs" />
-        <Compile Include="dependencies\embassies\russian\Kdmid.fs" />
-        <Compile Include="dependencies\embassies\italian\Italian.fs" />
-        <Compile Include="dependencies\embassies\italian\Prenotami.fs" />
-        <Compile Include="dependencies\embassies\Embassies.fs" />
+        <Compile Include="dependencies\Culture.fs" />
+        <Compile Include="dependencies\Embassies.fs" />
+        <Compile Include="dependencies\services\russian\Russian.fs" />
+        <Compile Include="dependencies\services\russian\Midpass.fs" />
+        <Compile Include="dependencies\services\russian\Kdmid.fs" />
+        <Compile Include="dependencies\services\italian\Italian.fs" />
+        <Compile Include="dependencies\services\italian\Prenotami.fs" />
+        <Compile Include="dependencies\services\Services.fs" />
+        <Compile Include="dependencies\Subscriptions.fs" />
         <Compile Include="dependencies\Users.fs" />
-        <Compile Include="dependencies\Services.fs" />
         <Compile Include="services\culture\Query.fs" />
         <Compile Include="services\culture\Command.fs" />
-        <Compile Include="services\embassies\russian\kdmid\Instruction.fs" />
-        <Compile Include="services\embassies\russian\kdmid\Notification.fs" />
-        <Compile Include="services\embassies\russian\kdmid\Query.fs" />
-        <Compile Include="services\embassies\russian\midpass\Query.fs" />
-        <Compile Include="services\embassies\russian\Query.fs" />
-        <Compile Include="services\embassies\italian\prenotami\Instruction.fs" />
-        <Compile Include="services\embassies\italian\prenotami\Notification.fs" />
-        <Compile Include="services\embassies\italian\prenotami\Query.fs" />
-        <Compile Include="services\embassies\italian\Query.fs" />
+        <Compile Include="services\services\russian\kdmid\Instruction.fs" />
+        <Compile Include="services\services\russian\kdmid\Notification.fs" />
+        <Compile Include="services\services\russian\kdmid\Query.fs" />
+        <Compile Include="services\services\russian\midpass\Query.fs" />
+        <Compile Include="services\services\russian\Query.fs" />
+        <Compile Include="services\services\italian\prenotami\Instruction.fs" />
+        <Compile Include="services\services\italian\prenotami\Notification.fs" />
+        <Compile Include="services\services\italian\prenotami\Query.fs" />
+        <Compile Include="services\services\italian\Query.fs" />
+        <Compile Include="services\services\Query.fs" />
+        <Compile Include="services\services\Command.fs" />
         <Compile Include="services\embassies\Query.fs" />
         <Compile Include="services\embassies\Command.fs" />
         <Compile Include="services\users\Query.fs" />
+        <Compile Include="services\subscriptions\Query.fs" />
+        <Compile Include="services\subscriptions\Command.fs" />
         <Compile Include="controllers\Culture.fs" />
-        <Compile Include="controllers\embassies\Embassies.fs" />
-        <Compile Include="controllers\embassies\russian\Kdmid.fs" />
-        <Compile Include="controllers\embassies\russian\Midpass.fs" />
-        <Compile Include="controllers\embassies\russian\Russian.fs" />
-        <Compile Include="controllers\embassies\italian\Prenotami.fs" />
-        <Compile Include="controllers\embassies\italian\Italian.fs" />
+        <Compile Include="controllers\Embassies.fs" />
+        <Compile Include="controllers\services\russian\Kdmid.fs" />
+        <Compile Include="controllers\services\russian\Midpass.fs" />
+        <Compile Include="controllers\services\russian\Russian.fs" />
+        <Compile Include="controllers\services\italian\Prenotami.fs" />
+        <Compile Include="controllers\services\italian\Italian.fs" />
+        <Compile Include="controllers\services\Services.fs" />
+        <Compile Include="controllers\Subscriptions.fs" />
         <Compile Include="controllers\Users.fs" />
         <Compile Include="controllers\Controller.fs" />
         <Compile Include="Client.fs" />
