Clean up unused test dependencies and improve code structure
Commented out unused test fixture code and streamlined dependencies in multiple modules. Key updates include simplifying culture queries and notification handling, adding Midpass request storage initialization, and refining request and chat handling logic for Russian embassy services.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -38,9 +38,9 @@
         <Compile Include="router\Router.fs" />
         <Compile Include="dependencies\client\Web.fs" />
         <Compile Include="dependencies\client\Persistence.fs" />
+        <Compile Include="dependencies\client\Culture.fs" />
         <Compile Include="dependencies\client\Client.fs" />
         <Compile Include="dependencies\client\Request.fs" />
-        <Compile Include="dependencies\Culture.fs" />
         <Compile Include="dependencies\services\Services.fs" />
         <Compile Include="dependencies\services\russian\Russian.fs" />
         <Compile Include="dependencies\services\russian\Midpass.fs" />
