Rename types and methods to improve consistency
Refactor several modules to standardize naming conventions by replacing "Method" with "Route" and updating method names like "setRequestAppointments" to "setAppointments." Introduced `Notification.fs` for processing Kdmid notifications, improving message creation and handling. These changes aim to simplify code comprehension and align structures across the project.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -55,6 +55,7 @@
         <Compile Include="services\subscriptions\Command.fs" />
         <Compile Include="services\services\russian\kdmid\Query.fs" />
         <Compile Include="services\services\russian\kdmid\Command.fs" />
+        <Compile Include="services\services\russian\kdmid\Notification.fs" />
         <Compile Include="services\services\russian\midpass\Query.fs" />
         <Compile Include="services\services\russian\midpass\Command.fs" />
         <Compile Include="services\services\russian\Query.fs" />
